# inVRs-superbuild

./: CMakeLists.txt  LICENSE.md  README.md  repositories.cmake
cmake/: HelperFunctions.cmake  UninstallTarget.cmake  cmake_uninstall.cmake.in
cmake/glew-patch/: CMakeLists.txt  GLEWConfig.cmake.in
download/: README
repositories/: default.repositories.cmake  minimal.repositories.cmake
